<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".Activity.MobileNumberActivity">

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="18dp"
        android:src="@drawable/ic_back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="44.3dp"
        android:fontFamily="@font/sf_pro_display_bold"
        android:text="@string/your_mobile_number"
        android:textColor="@color/txt_black"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="17dp"
        android:fontFamily="@font/sf_pro_display_regular"
        android:lineSpacingExtra="5dp"
        android:text="@string/we_will_send_an_sms_with_a_confirmation_ncode_to_this_number"
        android:textColor="@color/smoke_gray"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="73dp"
        android:fontFamily="@font/sf_pro_display_regular"
        android:text="@string/phone_number"
        android:textColor="@color/smoke_gray"
        android:textSize="12sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="30dp"
        android:background="@color/transparent"
        android:fontFamily="@font/sf_pro_display_semibold"
        android:hint="@string/_91_99999xxxxx"
        android:inputType="number"
        android:maxLength="10"
        android:textColor="@color/txt_black"
        android:textColorHint="@color/txt_black"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15.8dp"
        android:layout_marginRight="30dp"
        android:background="@color/smoke_gray" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30.2dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/rectangle_green"
        android:fontFamily="@font/sf_pro_display_bold"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>