<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingLeft="11dp"
    android:paddingBottom="11dp"
    android:paddingTop="11dp"
    android:paddingRight="13dp"
    android:background="@drawable/rectangle_gray_favourite"
    android:layout_marginBottom="16dp">

    <com.makeramen.roundedimageview.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/img_product"
        android:layout_width="103dp"
        android:layout_height="95dp"
        android:layout_gravity="center"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_easy_shop"
        app:riv_border_color="@color/transparent"
        app:riv_border_width="0dip"
        app:riv_corner_radius="10dp"
        app:riv_mutate_background="true"
        app:riv_oval="false"
        app:riv_tile_mode="clamp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginLeft="13dp">

        <TextView
            android:id="@+id/txt_ltr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_semibold"
            android:text="@string/_1_ltr"
            android:textColor="@color/green"
            android:textSize="12sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_semibold"
            android:text="@string/dummy_product_title_add_will_nbe_here"
            android:layout_marginTop="2dp"
            android:textColor="@color/txt_black"
            android:textSize="13sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_green_btn"
            android:text="@string/move_to_cart"
            android:textColor="@color/white"
            android:paddingRight="14dp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:paddingLeft="14dp"
            android:textSize="11sp"
            android:fontFamily="@font/sf_pro_display_semibold"/>


        <TextView
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/_15"
            android:layout_gravity="center"
            android:textColor="@color/subtxt_gray"
            android:layout_marginRight="5dp"
            android:textSize="12sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_semibold"
            android:text="@string/_12"
            android:layout_gravity="center"
            android:textColor="@color/green"
            android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>