<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="301dp"
    android:layout_height="wrap_content"
    android:layout_marginRight="16dp"
    android:background="@drawable/rectangle_home_gray"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:paddingBottom="50dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="50dp"
        android:layout_marginRight="63dp"
        android:fontFamily="@font/sf_pro_display_regular"
        android:letterSpacing="0.25"
        android:text="@string/fresh"
        android:textColor="@color/txt_black"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/txt_vegType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="8dp"
        android:layout_marginRight="28dp"
        android:fontFamily="@font/sf_pro_display_bold"
        android:text="@string/vegetable"
        android:textColor="@color/txt_black"
        android:textSize="24sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:layout_marginTop="11dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/rectangle_green_btn"
        android:fontFamily="@font/sf_pro_display_semibold"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:text="@string/shop_now"
        android:textColor="@color/white"
        android:textSize="11sp" />
</LinearLayout>