<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activity.OrderConfurm">

    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp"
        android:clipToPadding="false"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_effect"
            android:layout_marginLeft="16sp"
            android:layout_marginTop="23.5dp"
            android:src="@drawable/ic_close"
            app:tint="@color/black" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/anim"
            android:layout_gravity="center"
            app:lottie_rawRes="@raw/confirm_order"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            android:layout_marginTop="50dp"
            android:layout_width="250dp"
            android:layout_height="250dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/sf_pro_display_bold"
            android:text="@string/thank_you"
            android:textColor="@color/txt_black"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/your_items_has_been_placed_and_nis_on_it_s_way_to_being_processed"
            android:textColor="@color/smoke_gray"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="31dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/rectangle_gray_border_cure"
            android:orientation="horizontal"
            android:paddingLeft="14.5dp"
            android:paddingTop="16dp"
            android:paddingRight="11.5dp"
            android:paddingBottom="17dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:text="@string/order_number"
                    android:textColor="@color/smoke_gray"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/orderNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:fontFamily="@font/sf_pro_display_semibold"
                    android:text="@string/_9876512390"
                    android:textColor="@color/green"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:text="@string/date"
                    android:textColor="@color/smoke_gray"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:fontFamily="@font/sf_pro_display_semibold"
                    android:text="@string/_11_may_09_10_am_2020"
                    android:textColor="@color/green"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>


        <Button
            android:id="@+id/backToHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="94dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="94dp"
            android:background="@drawable/rectangle_green_btn"
            android:fontFamily="@font/sf_pro_display_semibold"
            android:text="@string/back_to_home"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>


</androidx.core.widget.NestedScrollView>